tests/fail/fail_nested_struct_decl.kl
fn inisiu() {
    molda Mesa {
        nter largura,
    }
}
